[gd_scene load_steps=10 format=3]

[ext_resource type="Script" path="res://Scripts/menu_background.gd" id="1_fa74u"]
[ext_resource type="Script" path="res://Scripts/Camera.gd" id="4_pyxrl"]
[ext_resource type="Texture2D" uid="uid://dft3dognr243p" path="res://Art/foreground.png" id="10_sxdsp"]
[ext_resource type="AudioStream" uid="uid://cae7vyrjjiux3" path="res://Sound/battllle.wav" id="12_6gx5m"]
[ext_resource type="FontFile" uid="uid://1tan0p4qpvfj" path="res://Art/Fonts/Kenney Pixel Square.ttf" id="13_tkf3x"]

[sub_resource type="Animation" id="Animation_fbc4v"]
resource_name = "Flashing Background"
length = 0.71
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_0htjr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oine5"]
_data = {
"Flashing Background": SubResource("Animation_fbc4v"),
"RESET": SubResource("Animation_0htjr")
}

[sub_resource type="Curve2D" id="Curve2D_4neny"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -135, 0, 0, 0, 0, 129, -88, 0, 0, 0, 0, 144, 0, 0, 0, 0, 0, 129, 89, 0, 0, 0, 0, 1, 128, 0, 0, 0, 0, -126, 90, 0, 0, 0, 0, -142, 1, 0, 0, 0, 0, -126, -87, 0, 0, 0, 0, 0, -135)
}
point_count = 9

[node name="MenuBackground" type="Node2D"]
script = ExtResource("1_fa74u")

[node name="Back Background" type="ColorRect" parent="."]
offset_left = -185.0
offset_top = -111.0
offset_right = 181.0
offset_bottom = 123.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Background" type="ColorRect" parent="."]
offset_left = -160.0
offset_top = -90.0
offset_right = 157.0
offset_bottom = 91.0
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="FlashingBackground" type="AnimationPlayer" parent="Background"]
autoplay = "Flashing Background"
libraries = {
"": SubResource("AnimationLibrary_oine5")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
script = ExtResource("4_pyxrl")

[node name="ResetCam" type="Timer" parent="Camera2D"]
wait_time = 0.25

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_4neny")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(0, -135)
rotation = 0.349393

[node name="mob_spawn_timer" type="Timer" parent="."]

[node name="Foreground" type="Sprite2D" parent="."]
z_index = 15
position = Vector2(9.53674e-07, 0)
scale = Vector2(0.925, 1)
texture = ExtResource("10_sxdsp")

[node name="ColorRect3" type="ColorRect" parent="Foreground"]
offset_left = -173.0
offset_top = -90.0
offset_right = -137.0
offset_bottom = 90.0
color = Color(0.211765, 0.211765, 0.211765, 1)

[node name="ColorRect" type="ColorRect" parent="Foreground"]
offset_left = -198.0
offset_top = -90.0
offset_right = -128.0
offset_bottom = 90.0
color = Color(0.619608, 0.0431373, 0.0588235, 1)

[node name="ColorRect4" type="ColorRect" parent="Foreground"]
offset_left = 128.0
offset_top = -90.0
offset_right = 217.0
offset_bottom = 90.0
color = Color(0.619608, 0.0431373, 0.0588235, 1)

[node name="BattleTheme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_6gx5m")

[node name="BattleTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="Label" type="Label" parent="BattleTimer"]
visible = false
offset_left = -20.0
offset_top = -87.0
offset_right = 20.0
offset_bottom = -64.0
theme_override_fonts/font = ExtResource("13_tkf3x")
theme_override_font_sizes/font_size = 12
text = "0:00"
horizontal_alignment = 1

[node name="Brain" type="Marker2D" parent="."]

[connection signal="timeout" from="Camera2D/ResetCam" to="Camera2D" method="_on_reset_cam_timeout"]
[connection signal="timeout" from="mob_spawn_timer" to="." method="_on_mob_spawn_timer_timeout"]
